<resources>
    <string name="app_name">My Application</string>
    <string name="my_application">My Application</string>
    <string name="facebook_app_id">1130335477619642</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="consent_status_not_available">Consent Status: Not Available</string>
    <string name="load_preference_centre">Load Preference Centre</string>
    <string name="load_banner">Load Banner</string>
    <string name="load_preference_centre_dark">Load Preference Centre (Dark Mode)</string>
    <string name="load_banner_dark">Load Banner (Dark Mode)</string>

</resources>
