<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/consentStatusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consent_status_not_available"
        android:textSize="16sp"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_application"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/consentStatusTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

    <!-- Light Mode Buttons -->
    <Button
        android:id="@+id/buttonLoadPreferenceCentre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_preference_centre"
        app:layout_constraintTop_toBottomOf="@id/appNameTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <Button
        android:id="@+id/buttonLoadBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_banner"
        app:layout_constraintTop_toBottomOf="@id/buttonLoadPreferenceCentre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Dark Mode Buttons -->
    <Button
        android:id="@+id/buttonLoadPreferenceCentreDarkMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_preference_centre_dark"
        app:layout_constraintTop_toBottomOf="@id/buttonLoadBanner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/buttonLoadBannerDarkMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_banner_dark"
        app:layout_constraintTop_toBottomOf="@id/buttonLoadPreferenceCentreDarkMode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />



</androidx.constraintlayout.widget.ConstraintLayout>
